# BInspected

./: .gitignore  FigMan_inspection.json  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
examples/: DescriptorExample.json  GoldenClass.json  GoldenClassInstance.json  GoldenClassInstanceMethodOne.json  custom-class.py  entry.json  entry_inspection.json  figman_inspection.json  inspection_output.json  main_frame_inspection.json  mainframe.json  quick_tests.py  root_inspection.json  select_btn_inspection.json  tkinter-window.py  tkrootinspection.json  tkrootinstanceinspection.json  uses.py
legacy/: classifier.py  parser.py
object_research/: __init__.py
scripts/: info_dump.py
src/: __init__.py  classifier.py  golden_class.py  instrospection.py  parser.py
src/BInspected/: __init__.py  _version.py  classifier.py  instrospection.py
src/binspected/: __init__.py  _version.py  bclassified.py  binspected.py  classifier.py  introspection.py  just_starting_over.py  parser.py
