[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "binspected"
version = "0.1.1"
description = "Recursive Python introspection engine"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Donald Reilly", email = "donald.reilly.jr@outlook.com" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
